examples/fail/semantic/struct_infinite_size.bina
struct Node {
    next: [1]Node;
}

fn main() -> int {
    return 0;
}
